tests/semantica/invalid/declaracion/test1.ctds
program
	{
		integer x = 0;
		bool x = true;

		void main(){
			
		}
	}